finished adding all html elements and basic css

--- a/Main/index.html
+++ b/Main/index.html
@@ -6,44 +6,51 @@
     <title>Neil Dobson Portfolio</title>
   </head>
   <body>
-    <header>
-      <h1 class="page-title">Neil Dobson</h1>
+    <header class="header">
+      <h1>Neil Dobson</h1>
       <img src="./assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
       <nav>
         <ul>
           <li>
             <a href="#About-Me">About Me</a>
           </li>
-          <li>
-            <a href="#Work">Work</a>
-          </li>
-          <li>
-            <a href="#Contact-Me">Contact Me</a>
-          </li>
-          <li>
-            <a href="#Resume">Resume</a>
-          </li>
+          <li><a href="#Work">Work</a></li>
+          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#Resume">Resume</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h2 id="About-Me">About Me</h2>
-      <p>
-        Recent coding bootcamp graduate seeking employment. Skills include HTML,
-        CSS, JavaScript and React.
-      </p>
-      <h2 id="Work">Work</h2>
-
-      <h2 id="Contact-Me">Contact Me</h2>
-      <ul>
-        <li>248-935-4353</li>
-        <li>njdobson1@gmail.com</li>
-        <li>
-          <a href="https://github.com/ndz4shz?tab=repositories">GitHub</a>
-        </li>
-      </ul>
-
-      <h2 id="Resume"></h2>
+      <section class="card">
+        <h3 id="About-Me">About Me</h3>
+        <p>
+          Recent coding bootcamp graduate seeking employment. Skills include
+          HTML, CSS, JavaScript and React. I'm actively adding more skills.
+        </p>
+      </section>
+      <section class="card">
+        <h3 id="Work">Work</h3>
+        <div>Developer Portfolio</div>
+        <div>Placeholder for future projects</div>
+        <div>Placeholder for future projects</div>
+        <div>Placeholder for future projects</div>
+        <div>Placeholder for future projects</div>
+        <div>Placeholder for future projects</div>
+        <div>Placeholder for future projects</div>
+      </section>
+      <section class="card">
+        <h3 id="Contact">Contact</h3>
+        <ul>
+          <li>248-935-4353</li>
+          <li>njdobson1@gmail.com</li>
+          <li>
+            <a href="https://github.com/ndz4shz?tab=repositories">GitHub</a>
+          </li>
+        </ul>
+      </section>
+      <section class="card">
+        <h3 id="Resume">Resume</h3>
+      </section>
     </main>
   </body>
 </html>
