updated css and README file, added pics and links in html

--- a/Main/index.html
+++ b/Main/index.html
@@ -6,50 +6,88 @@
     <title>Neil Dobson Portfolio</title>
   </head>
   <body>
-    <header class="header">
+    <header>
       <h1>Neil Dobson</h1>
       <img src="./assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
-      <nav>
-        <ul>
-          <li>
-            <a href="#About-Me">About Me</a>
-          </li>
-          <li><a href="#Work">Work</a></li>
-          <li><a href="#Contact">Contact</a></li>
-          <li><a href="#Resume">Resume</a></li>
-        </ul>
-      </nav>
     </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="#About-Me">About Me</a>
+        </li>
+        <li><a href="#Work">Work</a></li>
+        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#Resume">Resume</a></li>
+      </ul>
+    </nav>
+
     <main>
-      <section class="card">
-        <h3 id="About-Me">About Me</h3>
-        <p>
+      <section class="aboutme">
+        <h2 id="Work">About Me</h2>
+        <p class="skills">
           Recent coding bootcamp graduate seeking employment. Skills include
           HTML, CSS, JavaScript and React. I'm actively adding more skills.
         </p>
       </section>
-      <section class="card">
-        <h3 id="Work">Work</h3>
-        <div>Developer Portfolio</div>
-        <div>Placeholder for future projects</div>
-        <div>Placeholder for future projects</div>
-        <div>Placeholder for future projects</div>
-        <div>Placeholder for future projects</div>
-        <div>Placeholder for future projects</div>
-        <div>Placeholder for future projects</div>
+      <section class="work">
+        <h2 id="work">Work</h2>
+        <section class="work2">
+          <section class="text-in-pic">
+            <a href="https://ndz4shz.github.io/Developer-Portfolio/">
+              <img
+                src="/Main/assets/images/portfolio.jpg"
+                alt="picture of a desktop"
+              />
+            </a>
+            <p class="bottom-left">Developer Portfolio</p>
+          </section>
+          <section class="text-in-pic">
+            <a href="">
+              <img
+                src="/Main/assets/images/cityscape.jpg"
+                alt="picture of a cityscape"
+            /></a>
+            <p class="bottom-left">Coming Soon</p>
+          </section>
+          <section class="text-in-pic">
+            <a href="">
+              <img
+                src="/Main/assets/images/mobileapp.jpg"
+                alt="picture of a cellphone"
+            /></a>
+            <p class="bottom-left">Coming Soon</p>
+          </section>
+          <section class="text-in-pic">
+            <a href="">
+              <img
+                src="/Main/assets/images/recipeapp.jpg"
+                alt="picture of food"
+            /></a>
+            <p class="bottom-left">Coming Soon</p>
+          </section>
+          <section class="text-in-pic">
+            <a href="">
+              <img
+                src="/Main/assets/images/photoapp.jpg"
+                alt="picture of tarot cards"
+            /></a>
+            <p class="bottom-left">Coming Soon</p>
+          </section>
+        </section>
       </section>
-      <section class="card">
-        <h3 id="Contact">Contact</h3>
+
+      <section class="contact">
+        <h2 id="Contact">Contact</h2>
         <ul>
           <li>248-935-4353</li>
-          <li>njdobson1@gmail.com</li>
+          <li><a href="mailto:njdobson1@gmail.com">njdobson1@gmail.com</a></li>
           <li>
             <a href="https://github.com/ndz4shz?tab=repositories">GitHub</a>
           </li>
         </ul>
       </section>
       <section class="card">
-        <h3 id="Resume">Resume</h3>
+        <h2 id="Resume">Resume</h2>
       </section>
     </main>
   </body>
