--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Main/assets/css/style.css" />
+    <link rel="stylesheet" href="/Main/assets/css/style.css" />
     <title>Neil Dobson Portfolio</title>
   </head>
   <body>
     <header>
       <h1>Neil Dobson</h1>
-      <img src="main/assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
+      <img src="/main/assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
     </header>
     <nav>
       <ul>
