--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Main/assets/css/style.css" />
+    <link rel="stylesheet" href="./Main/assets/css/style.css" />
     <title>Neil Dobson Portfolio</title>
   </head>
   <body>
     <header>
       <h1>Neil Dobson</h1>
-      <img src="/main/assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
+      <img
+        src="./main/assets/images/BottcampPic.png"
+        alt="photo of Neil Dobson"
+      />
     </header>
     <nav>
       <ul>
@@ -35,7 +38,7 @@
           <section class="text-in-pic">
             <a href="https://ndz4shz.github.io/Developer-Portfolio/">
               <img
-                src="/Main/assets/images/portfolio.jpg"
+                src="./Main/assets/images/portfolio.jpg"
                 alt="picture of a desktop"
               />
             </a>
@@ -44,7 +47,7 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/Main/assets/images/cityscape.jpg"
+                src="./Main/assets/images/cityscape.jpg"
                 alt="picture of a cityscape"
             /></a>
             <p class="bottom-left">Coming Soon</p>
@@ -52,7 +55,7 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/Main/assets/images/mobileapp.jpg"
+                src="./Main/assets/images/mobileapp.jpg"
                 alt="picture of a cellphone"
             /></a>
             <p class="bottom-left">Coming Soon</p>
@@ -60,7 +63,7 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/Main/assets/images/recipeapp.jpg"
+                src="./Main/assets/images/recipeapp.jpg"
                 alt="picture of food"
             /></a>
             <p class="bottom-left">Coming Soon</p>
@@ -68,7 +71,7 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/Main/assets/images/photoapp.jpg"
+                src="./Main/assets/images/photoapp.jpg"
                 alt="picture of tarot cards"
             /></a>
             <p class="bottom-left">Coming Soon</p>
