updated sources for img and css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Neil Dobson Portfolio</title>
   </head>
   <body>
     <header>
       <h1>Neil Dobson</h1>
-      <img src="/assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
+      <img src="./assets/images/BottcampPic.png" alt="photo of Neil Dobson" />
     </header>
     <nav>
       <ul>
@@ -35,7 +35,7 @@
           <section class="text-in-pic">
             <a href="https://ndz4shz.github.io/Developer-Portfolio/">
               <img
-                src="/assets/images/portfolio.jpg"
+                src="./assets/images/portfolio.jpg"
                 alt="picture of a desktop"
               />
             </a>
@@ -44,7 +44,7 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/assets/images/cityscape.jpg"
+                src="./assets/images/cityscape.jpg"
                 alt="picture of a cityscape"
             /></a>
             <p class="bottom-left">Coming Soon</p>
@@ -52,21 +52,21 @@
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/assets/images/mobileapp.jpg"
+                src="./assets/images/mobileapp.jpg"
                 alt="picture of a cellphone"
             /></a>
             <p class="bottom-left">Coming Soon</p>
           </section>
           <section class="text-in-pic">
             <a href="">
-              <img src="/assets/images/recipeapp.jpg" alt="picture of food"
+              <img src="./assets/images/recipeapp.jpg" alt="picture of food"
             /></a>
             <p class="bottom-left">Coming Soon</p>
           </section>
           <section class="text-in-pic">
             <a href="">
               <img
-                src="/assets/images/photoapp.jpg"
+                src="./assets/images/photoapp.jpg"
                 alt="picture of tarot cards"
             /></a>
             <p class="bottom-left">Coming Soon</p>
